--- a/welcome.html
+++ b/welcome.html
@@ -1,6 +1,5 @@
 <!-- comment -->
-<h1>welcome to project1<h1>
+<h1>welcome to project1<h1><p>Hello Guest!</p>
 <a href="login.php">Login</a>
-<p>hello Guest</p>
 <a href="register.php">Register</a>
 <a href="aboutus.php">About us</a>
