added Contact Us

--- a/welcome.html
+++ b/welcome.html
@@ -2,4 +2,5 @@
 <h1>welcome to project1<h1><p>Hello Guest!</p>
 <a href="login.php">Login</a>
 <a href="register.php">Register</a>
+<a href="contactus.php">Contact us</a>
 <a href="aboutus.php">About us</a>
